[gd_scene load_steps=12 format=3 uid="uid://divv6dsfra0i8"]

[ext_resource type="Script" path="res://saintholyscripts/tropasManager.gd" id="1_rbjpp"]
[ext_resource type="Texture2D" uid="uid://chp35nmif1c6o" path="res://assets/sprites/Telas-02.png" id="2_2bqju"]
[ext_resource type="Texture2D" uid="uid://daj2vy0qjrh1x" path="res://assets/sprites/tile_0097.png" id="3_ntn6l"]
[ext_resource type="Texture2D" uid="uid://dsek3qlvmtnyp" path="res://assets/sprites/Telas-06.png" id="4_ftlfy"]
[ext_resource type="Texture2D" uid="uid://d0pnulhesv680" path="res://assets/sprites/Telas-04.png" id="5_hsrmm"]
[ext_resource type="Texture2D" uid="uid://bxxnppmx8vmv8" path="res://assets/sprites/Telas-08.png" id="6_354m7"]
[ext_resource type="Texture2D" uid="uid://4pskthvst1tg" path="res://assets/sprites/botao_preto.png" id="7_23gqm"]
[ext_resource type="AudioStream" uid="uid://bn67ekexcmlcc" path="res://assets/musicas/Asteria demo 1 - 14_07_2024 19.56.mp3" id="7_dm6uc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_efj1n"]
atlas = ExtResource("5_hsrmm")
region = Rect2(1472, 288, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0pcv"]
atlas = ExtResource("5_hsrmm")
region = Rect2(176, 288, 160, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_p48tp"]
atlas = ExtResource("6_354m7")
region = Rect2(304, 96, 544, 160)

[node name="Tropas Iniciais" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbjpp")
indice_max = 3

[node name="Fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2bqju")
expand_mode = 1

[node name="Tropa Imagem" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 356.0
offset_top = 404.0
offset_right = 756.0
offset_bottom = 804.0
texture = ExtResource("3_ntn6l")
expand_mode = 1

[node name="Hud Habilidade" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 897.0
offset_top = 503.0
offset_right = 2939.0
offset_bottom = 1528.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ftlfy")
expand_mode = 1

[node name="Habilidade Texto" type="Label" parent="Hud Habilidade"]
layout_mode = 0
offset_left = 226.0
offset_top = 234.0
offset_right = 1782.0
offset_bottom = 812.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "Surpreende o flanco do oponente, indo para suas costas, golpeando-o repetidamente com seu pesado punhal, causando 25üí•."
vertical_alignment = 1
autowrap_mode = 3

[node name="Seta Direita" type="Button" parent="."]
layout_mode = 0
offset_left = 819.0
offset_top = 571.0
offset_right = 987.0
offset_bottom = 739.0
scale = Vector2(0.5, 0.5)
icon = SubResource("AtlasTexture_efj1n")
flat = true

[node name="Seta Esquerda" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 571.0
offset_right = 374.0
offset_bottom = 739.0
scale = Vector2(0.5, 0.5)
icon = SubResource("AtlasTexture_f0pcv")
flat = true

[node name="Nome Tropa" type="Label" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 152.0
offset_right = 905.0
offset_bottom = 262.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
text = "Sabre de Turonia"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Status" type="Control" parent="."]
anchors_preset = 0
offset_left = 1062.0
offset_top = 309.0
offset_right = 1820.0
offset_bottom = 538.0

[node name="Vida Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 38.0
offset_top = 16.0
offset_right = 222.0
offset_bottom = 85.0
theme_override_font_sizes/normal_font_size = 50
text = "‚ù§: 100"
fit_content = true
scroll_active = false

[node name="Mana Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 263.0
offset_top = 16.0
offset_right = 429.0
offset_bottom = 85.0
theme_override_font_sizes/normal_font_size = 50
text = "üíß: 100"
fit_content = true
scroll_active = false

[node name="Mana_Basic Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 478.0
offset_top = 16.0
offset_right = 717.0
offset_bottom = 85.0
theme_override_font_sizes/normal_font_size = 50
text = "üíß‚öî: 100"
fit_content = true
scroll_active = false

[node name="Dano_Basic Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 18.0
offset_top = 141.0
offset_right = 241.0
offset_bottom = 210.0
theme_override_font_sizes/normal_font_size = 50
text = "‚öî: 10üí•"
fit_content = true
scroll_active = false

[node name="Range Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 308.0
offset_top = 141.0
offset_right = 445.0
offset_bottom = 210.0
theme_override_font_sizes/normal_font_size = 50
text = "üèπ: 1"
fit_content = true
scroll_active = false

[node name="Bonus Texto" type="RichTextLabel" parent="Status"]
layout_mode = 0
offset_left = 493.0
offset_top = 141.0
offset_right = 745.0
offset_bottom = 210.0
theme_override_font_sizes/normal_font_size = 50
text = "üåü: +10üí•"
fit_content = true
scroll_active = false

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 935.0
offset_right = 625.0
offset_bottom = 1103.0
scale = Vector2(0.4, 0.4)
icon = SubResource("AtlasTexture_p48tp")
flat = true

[node name="Escolher" type="Button" parent="."]
offset_left = 1408.0
offset_top = 955.0
offset_right = 2598.0
offset_bottom = 1178.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("7_23gqm")
flat = true

[node name="Label" type="Label" parent="Escolher"]
layout_mode = 0
offset_left = 37.0
offset_top = 43.0
offset_right = 1137.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 80
text = "ESCOLHER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dm6uc")
volume_db = -10.0
autoplay = true
bus = &"Musica"

[connection signal="pressed" from="Seta Direita" to="." method="_on_seta_direita_pressed"]
[connection signal="pressed" from="Seta Esquerda" to="." method="_on_seta_esquerda_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Escolher" to="." method="_on_escolher_pressed"]
